force-app/main/default/objects/Assignment_Rule__c/Assignment_Rule__c.object-meta.xml
<CustomObject>
    <description>Assignment rules</description>
    <label>QA Assignment Rule</label>
    <nameField>
        <label>Rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>QA Assignment Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>