force-app/main/default/objects/Assignment_Rule__c/fields/Assignment_Group__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Assignment group</description>
    <label>Assignment Group</label>
    <referenceTo>Assignment_Group__c</referenceTo>
    <relationshipName>Assignment_Rule_Group</relationshipName>
    <type>Lookup</type>
</CustomField>