force-app/main/default/objects/Assignment_Rule__c/fields/Object_Prefix__c.field-meta.xml
<CustomField>
    <fullName>Object_Prefix__c</fullName>
    <description>Object prefix</description>
    <label>Object Prefix</label>
    <length>3</length>
    <type>Text</type>
</CustomField>