force-app/main/default/objects/Assignment_Rule__c/fields/Queue_Id__c.field-meta.xml
<CustomField>
    <fullName>Queue_Id__c</fullName>
    <description>Queue id</description>
    <label>Queue Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>