force-app/main/default/objects/Assignment_Rule__c/fields/Rule_Imported__c.field-meta.xml
<CustomField>
    <fullName>Rule_Imported__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Rule Imported</label>
    <type>Checkbox</type>
</CustomField>